syntax = "proto3";

package rivet.backend.pkg.cluster.msg.server_install;

import "proto/common.proto";
import "proto/backend/cluster.proto";

/// name = "msg-cluster-server-install"
/// parameters = [
/// 	{ name = "request_id" },
/// ]
message Message {
    rivet.common.Uuid request_id = 1;
    string public_ip = 2;
    rivet.backend.cluster.PoolType pool_type = 3;

    rivet.common.Uuid datacenter_id = 4;
    // Unset when installing prebake servers since they don't have an id. Used to check if
    // the server is currently being deleted to prevent installation
    optional rivet.common.Uuid server_id = 5;

    // Simply passed to the install complete message
    rivet.backend.cluster.Provider provider = 6;
    bool initialize_immediately = 7;
}
